--- a/index.html
+++ b/index.html
@@ -3,154 +3,172 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>CV Karol Urbaniak</title>
   </head>
   <body>
-
-    <header>
-      <img class="ja" src="ja.jpg" alt="">
-      <div>
-        <h1>Karol Urbaniak</h1>
-        <span>Student at the West Pomeranian University of Technology in Szczecin</span>
+    <div class="shadow">
+      <header>
+        <img class="ja" src="ja.jpg" alt="">
         <div>
-          <a class="cv" href="https://file100.gofile.io/download/eda427c7-1a64-440a-8fa3-94883029c9d3/CV%20Karol%20Urbaniak.pdf">Download CV</a>
+          <h1>Karol Urbaniak</h1>
+          <span>Student at the West Pomeranian University of Technology in Szczecin</span>
+          <div>
+            <a class="cv" href="https://file102.gofile.io/download/efd55287-2da6-4341-959a-5e0ff3a588d6/CV_Karol_Urbaniak.pdf">Download PDF</a>
+          </div>
         </div>
+        <address>
+          <ul>
+            <li><img src="phone.png"/><strong>Phone:</strong><a href="tel:513 358 111"> 513 358 111</a></li>
+            <li><img src="mail.png"/><strong>Email:</strong> <a href="mailto:karol.jan.urbaniak@gmail.com">karol.jan.urbaniak@gmail.com</a></li>
+            <li><img src="birthday-cake.png"/><strong>Birthdate</strong>: 05.05.1997</li>
+            <li><img src="pin.png"/><strong>Residence</strong>: Szczecin</li>
+          </ul>
+        </address>
+
+      </header>
+      <main>
+        <section>
+        <h2 id="about">About Me</h2>
+        <p>Hello, my name is <strong>Karol!</strong> I am currently completing my second degree in Computer Science
+           at the West Pomeranian University of Technology in Szczecin. I am enthusiastic, open to
+           gaining new knowledge and competencies, detail-oriented programmer seeking an entry-level
+           position with the Company to use my skills in coding, troubleshooting problems, and assisting in the timely completion of projects.
+           My current level of written and spoken English is <strong>B2-C1</strong>.</p>
+        </section>
 
 
-      </div>
-      <address>
-        <ul>
-          <li><img src="phone.png"/><strong>Phone:</strong><a href="tel:513 358 111"> 513 358 111</a></li>
-          <li><img src="mail.png"/><strong>Email:</strong> <a href="mailto:karol.jan.urbaniak@gmail.com">karol.jan.urbaniak@gmail.com</a></li>
-          <li><img src="birthday-cake.png"/><strong>Birthdate</strong>: 05.05.1997</li>
-          <li><img src="pin.png"/><strong>Residence</strong>: Szczecin</li>
-        </ul>
-      </address>
+        <section>
+          <h2>Education</h2>
+          <ul>
+            <li>03.2020-Present - <a href="https://www.zut.edu.pl/uczelnia/aktualnosci.html">West Pomeranian University of Technology in Szczecin</a> - Master's Degree in Computer Science </li>
+            <li>10.2016–02.2020 - West Pomeranian University of Technology in Szczecin - Computer Science Engineering Degree </li>
+            <li>09.2013–06.2016 - XIV High School in Szczecin - Profile Mathematics and Technology</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Activities and Associations</h2>
+          <ul>
+            <li>2018-2021 - President of the Student Academic Association <a href="http://mlg.edu.pl/">"Machine Learning Group"</a> </li>
+            <li>2018-2019 - Member of the University Club of the Academic Sports Association "AZS"</li>
+            <li>10.2019-11.2019 - Participation in Three National Conferences</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Work Experience</h2>
+          <ul>
+            <li>03.2018–06.2018 - Business Analysis Internship at <a href="https://intive.com/pl">Intive</a></li>
+            <p>I had been working on the iOS application "CS:GO SPECTATOR" in the SCRUM team.
+              I had been using technologies like JIRA, Slack, Enterprise Architect, UML and screen prototyping tools.</p>
+          </ul>
 
-    </header>
-    <main class="container">
-      <section>
-      <h2 id="about">About Me</h2>
-      <p>Hello, my name is <strong>Karol!</strong> I am currently completing my second degree in Computer Science
-         at the West Pomeranian University of Technology in Szczecin. I am enthusiastic, open to
-         gaining new knowledge and competencies, detail-oriented programmer seeking an entry-level
-         position with the Company to use my skills in coding, troubleshooting problems, and assisting in the timely completion of projects.
-         My current level of written and spoken English is <strong>B2-C1</strong>.</p>
-      </section>
+        </section>
 
+        <section>
+          <h2>Certifications</h2>
+          <ul>
+            <li>02.2019 - Corruption in Public Administration</li>
+            <li>02.2019 - Business Corruption</li>
+            <li>02.2019 - Prevention of Corruption</li>
+            <li>6-13.04.2021 - Engineer Team Leader</li>
+            <li>15-17.11.2019 - Building the brand of an entity with scientific goals and effective presentation of the results of its activities</li>
+          </ul>
+        </section>
 
-      <section>
-        <h2>Education</h2>
-        <ul>
-          <li>03.2020-Present - <a href="https://www.zut.edu.pl/uczelnia/aktualnosci.html">West Pomeranian University of Technology in Szczecin</a> - Master's Degree in Computer Science </li>
-          <li>10.2016–02.2020 - West Pomeranian University of Technology in Szczecin - Computer Science Engineering Degree </li>
-          <li>09.2013–06.2016 - XIV High School in Szczecin - Profile Mathematics and Technology</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Activities and Associations</h2>
-        <ul>
-          <li>2018-2021 - President of the Student Academic Association <a href="http://mlg.edu.pl/">"Machine Learning Group"</a> </li>
-          <li>2018-2019 - Member of the University Club of the Academic Sports Association "AZS"</li>
-          <li>10.2019-11.2019 - Participation in Three National Conferences</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Work Experience</h2>
-        <ul>
-          <li>03.2018–06.2018 - Business Analysis Internship at <a href="https://intive.com/pl">Intive</a></li>
-          <p>I had been working on the iOS application "CS:GO SPECTATOR" in the SCRUM team.
-            I had been using technologies like JIRA, Slack, Enterprise Architect, UML and screen prototyping tools.</p>
-        </ul>
+        <section>
+          <h2>IT Programming Skills and Technologies</h2>
+          <ul>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>SQL</li>
+            <li>Git</li>
+            <li>LaTeX</li>
 
-      </section>
+          </ul>
+        </section>
+        <section>
+          <h2>Soft Skills</h2>
+          <ul>
+            <li>Work Organization</li>
+            <li>Teamwork</li>
+            <li>Communication skills</li>
+            <li>Time Management</li>
+            <li>Attention to Detail</li>
+            <li>Work ethic</li>
+            <li>Openness to Knowledge and Learning New Skills</li>
+          </ul>
+        </section>
 
-      <section>
-        <h2>Certifications</h2>
-        <ul>
-          <li>02.2019 - Corruption in Public Administration</li>
-          <li>02.2019 - Business Corruption</li>
-          <li>02.2019 - Prevention of Corruption</li>
-          <li>6-13.04.2021 - Engineer Team Leader</li>
-          <li>15-17.11.2019 - Building the brand of an entity with scientific goals and effective presentation of the results of its activities</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>IT Programming SKILLS AND TECHNOLOGIES</h2>
-        <ul>
-          <li>Python</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>jQuery</li>
-          <li>SQL</li>
-          <li>Git</li>
-          <li>LaTeX</li>
-
-        </ul>
-      </section>
-      <section>
-        <h2>Soft SKILLS</h2>
-        <ul>
-          <li>Work Organization</li>
-          <li>Teamwork</li>
-          <li>Communication skills</li>
-          <li>Time Management</li>
-          <li>Attention to Detail</li>
-          <li>Work ethic</li>
-          <li>Openness to Knowledge and Learning New Skills</li>
-        </ul>
-      </section>
-
-
-      <section>
-        <h2>Hobbies</h2>
-        <ul class="hobbies">
-          <li><img src="e-sport.png"/>
-            <div>
-
-
-              <h3>E-sport</h3></li>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,a pariatur. Excepteur sint occaecat cupidatat non proident,
-               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-          <li><img src="anime.png"/>
-            <div>
-              <h3>Anime</h3></li>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,a pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-          <li><img src="cinema.png"/>
-            <div>
-              <h3>Cinema</h3></li>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,a pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-          <li><img src="code.png"/>
-            <div>
-              <h3>Front-End Programming</h3></li>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,a pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-           </div>
-
-          <li><img src="sport.png"/>
-            <div>
-              <h3>Sport</h3></li>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,a pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-        </ul>
-
-      </section>
-    </main>
+        <section>
+          <h2>Hobbies</h2>
+          <ul>
+            <li class="hobby">
+              <img src="e-sport.png"/>
+              <div>
+                <h3>E-sport</h3>
+                <p>
+                  I love playing competitive games. Some of my favorite titles that I've played on an amateur/team level include two FPS games.
+                   The first was Counter-Strike Global: Offensive by <a href="https://www.valvesoftware.com/pl/">Valve Corporation</a>.
+                   The second was Valorant by <a href="https://www.riotgames.com/en">Riot Games</a>. In addition, occasionally, I play Fifa, produced by <a href="https://www.ea.com/pl-pl">EA Sports</a>.
+                </p>
+              </div>
+            </li>
+            <li class="hobby">
+              <img src="anime.png"/>
+              <div>
+                <h3>Anime</h3>
+                <p>
+                  I have been keen on anime since 2017. I love such series as Attack on Titan,
+                   Naruto, Jujutsu Kaisen, or Demon Slayer. I reckon that anime can present us with
+                    some stories in a better way than the adaptation of the same novel in regular cinema.
+                </p>
+              </div>
+            </li>
+            <li class="hobby">
+              <img src="code.png" />
+              <div>
+                <h3>Front-End Programming</h3>
+                <p>
+                  My adventure with web development started back in college. Since that time,
+                   I have been looking for what I want to do in the IT industry, and I concluded
+                    that working on the front-end is what I like, and I'm pretty good at it. Currently,
+                     I'm learning the Angular framework, and in the future, I intend to try working with
+                      the Django framework wheater I gain some experience in web application development.
+                       I want to grow in web development and become better every day at what I do.
+                       I'm providing a link here to my repository on <a href="https://github.com/KarolUrbaniak">GitHub</a>. I'm an ambitious person but
+                        still improving as a front-end developer, so please be understanding of me.
+                </p>
+              </div>
+            </li>
+            <li class="hobby">
+              <img src="cinema.png"/>
+              <div>
+                <h3>Cinema</h3>
+                <p>
+                  I've been a connoisseur of cinema practically forever. I prefer watching action,
+                  fantasy, science fiction, comedy or horror movies. I know many actors, but I don't have my favorite one. However,
+                   if I had to choose, works of such actors as Joaquin Phoenix, Christian Bale, or Leonardo DiCaprio would be on my list.
+                </p>
+              </div>
+            </li>
+            <li class="hobby">
+              <img src="sport.png"/>
+              <div>
+                <h3>Sport</h3>
+                <p>
+                  I have been actively supporting the Polish national football team for ten years. I am a big fan of striker Robert Lewandowski.
+                   I firmly believe that we will go far at the World Cup in Qatar in 2022.
+                   After a successful debut, coach Czeslaw Michniewicz showed class and gave me hope for the excellent development of the Polish national team.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
   </body>
-  <script src="JavaScript.js">
-
-  </script>
-
-
+  <script src="JavaScript.js"></script>
 </html>
