--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <title>CV Karol Urbaniak</title>
   </head>
@@ -19,8 +22,8 @@
         </div>
         <address>
           <ul>
-            <li><img src="phone.png"/><strong>Phone:</strong><a href="tel:513 358 111"> 513 358 111</a></li>
-            <li><img src="mail.png"/><strong>Email:</strong> <a href="mailto:karol.jan.urbaniak@gmail.com">karol.jan.urbaniak@gmail.com</a></li>
+            <li><img src="phone.png"/><strong>Phone: </strong><a href="tel:513 358 111"> 513 358 111</a></li>
+            <li><img src="mail.png"/><strong>Email:</strong> <a href="mailto:karol.jan.urbaniak@gmail.com"> karol.jan.urbaniak@gmail.com</a></li>
             <li><img src="birthday-cake.png"/><strong>Birthdate</strong>: 05.05.1997</li>
             <li><img src="pin.png"/><strong>Residence</strong>: Szczecin</li>
           </ul>
@@ -82,6 +85,7 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
+            <li>Angular</li>
             <li>jQuery</li>
             <li>SQL</li>
             <li>Git</li>
