--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>Karol Urbaniak</h1>
           <span>Student at the West Pomeranian University of Technology in Szczecin</span>
           <div>
-            <a class="cv" href="https://file102.gofile.io/download/efd55287-2da6-4341-959a-5e0ff3a588d6/CV_Karol_Urbaniak.pdf">Download PDF</a>
+            <a class="cv" href="https://store2.gofile.io/download/7a0f0365-0c2f-4c07-b60b-36641a8d4340/CV%20Karol%20Urbaniak.pdf">Download PDF</a>
           </div>
         </div>
         <address>
